--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,6 +5,12 @@ $local-margin-left: 8px;
 	display: flex;
 	flex-wrap: wrap;
 	border-bottom: ridge 1px #DDD;
+	box-shadow:0 1px 0 0 rgba(0,0,0,.05),0 2px 4px 0 rgba(0,0,0,.06);
+	background-color: white;
+	.header-inner{
+		width:80%;
+		margin:auto;
+	}
 	@import "headertop";
 	@import "headerbttm";
 }
