--- a/src/sass/_headerbttm.scss
+++ b/src/sass/_headerbttm.scss
@@ -12,14 +12,17 @@
 
 		.main-nav-btns {
 			display: flex;
-			justify-content: flex-start;
-			align-items: center;
+			// justify-content: flex-start;
+			// align-items: center;
 			flex-grow: 1;
 			min-height: 5vh;
 			
 			.nav-btn {
-				align-self: center; 
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				min-width: 10vw;
+				height:100%;
 			}
 
 			.nav-btn:hover {
