--- a/src/sass/sass.scss
+++ b/src/sass/sass.scss
@@ -12,10 +12,11 @@ $bgd-color: #f9f9f9;
 
 body {
 	background: $bgd-color;
+	height:100vh;
 }
 
 .body-contents {
-	background: #fff;
+	// background: #fff;
 }
 
 @import "header";
