end of morning - off to gym - check font definition in sass.scss for welcome--msg in contents.scss

--- a/src/sass/_column2.scss
+++ b/src/sass/_column2.scss
@@ -1,43 +1,47 @@
-	.column2 { 
+.column2 { 
+	display: flex;
+	flex-grow: 1;
+	margin-left: 1vw;
+	.kitbit { 
+		display: flex;
+		height: $row;
 		
-		.kitbit { 
+		.title { 
 
-			.title { 
-
-			}
-
-			input { 
-
-			}
 		}
 
-		.livechats { 
+		input { 
 
-			.chatitems { 
+		}
+	}
 
-				.item1 { 
+	.livechats { 
 
-				}
+		.chatitems { 
 
-				.item2 { 
+			.item1 { 
 
-				}
+			}
 
-				.item3 { 
+			.item2 { 
 
-				}
+			}
 
-				.item4 { 
+			.item3 { 
 
-				}
+			}
 
-				.item5 { 
+			.item4 { 
 
-				}
+			}
 
-				.item6 { 
+			.item5 { 
 
-				}
+			}
+
+			.item6 { 
+
 			}
 		}
 	}
+}
