--- a/src/sass/_column1.scss
+++ b/src/sass/_column1.scss
@@ -1,32 +1,34 @@
-	.column1 { 
+.column1 { 
+	display: flex;
+	flex-grow: 2;
+	margin-right: 1vw;
+	.row1-popular { 
 
-		.row1-popular { 
+		.item1 { 
 
-			.item1 { 
-
-			}
-
-			.item2 { 
-
-			}
-
-			.item3 { 
-
-			}
 		}
 
-		.row2-today { 
+		.item2 { 
 
-			.item1 { 
+		}
 
-			}
+		.item3 { 
 
-			.item2 { 
-
-			}
-
-			.item3 { 
-
-			}
 		}
 	}
+
+	.row2-today { 
+
+		.item1 { 
+
+		}
+
+		.item2 { 
+
+		}
+
+		.item3 { 
+
+		}
+	}
+}
