--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,11 +8,15 @@ $local-margin-left: 8px;
 	border-bottom: ridge 1px #DDD;
 	box-shadow:0 1px 0 0 rgba(0,0,0,.05),0 2px 4px 0 rgba(0,0,0,.06);
 	background-color: white;
-	.header-inner{
-		width:80%;
-		margin:auto;
+	
+	.header-inner {
+		display: flex;
+		justify-content: center;
+		flex-grow: 1;
+		flex-wrap: wrap;
+		@import "headertop";
+		
+		@import "headerbttm";
 	}
-	@import "headertop";
-	@import "headerbttm";
 }
 
