--- a/src/sass/_headertop.scss
+++ b/src/sass/_headertop.scss
@@ -1,26 +1,19 @@
 .headertop { 
 	display: flex;
-	width: 100%;
-	flex-basis: 100%;
-	// justify-content: flex-start;
+	width: 80%;
+	flex-basis: 80%;
 	align-items: center;
 	.logo {
 		display: inline-flex;
 		flex-grow: 1;
-		background-image: url('http://fillmurray.com/40/40');
-		min-height: 40px;
-		min-width: 40px;
-		max-height: 40px;
-		max-width: 40px;
-		margin: 6px;
-		border-radius: 40px;
+		transform: scale(.7);
 	}
 
 	.header--search-box {
 		display: flex;
 		border: solid 1px #DDD;
 		flex-grow: 100;
-		padding: 5px;
+		padding: $h-spacer;
 		.header--search-icon { 
 			margin: 10px;
 			svg { 
@@ -31,6 +24,7 @@
 			width: 100%;
 			border-style: none;
 			margin-left: $local-margin-left;
+			@include font-std-normal($fs-small);
 		}
 	
 	}
@@ -68,6 +62,7 @@
 	.header--btn-login { 
 		display: flex;
 		flex-grow: 1;
-
+		@include font-std-normal($fs-small);
+		margin-left: $h-spacer;
 	}
 }
